deployment/kubconfig/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      service: frontend
  template:
    metadata:
      labels:
        service: frontend
        api: external
    spec:
      containers:
      - image: mohinigonawala90/frontend:local
        name: frontend
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    service: frontend
  name: frontend
spec:
  ports:
    - name: "8100"
      port: 8100
      targetPort: 80
  selector:
    service: frontend
  type: LoadBalancer
