deployment/kubconfig/myappinfo.yaml

##################################################################################################
# Users service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: user
    service: user
spec:
  ports:
    - port: 8080
      name: http-web
  selector:
    app: user
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-v1
  labels:
    app: user
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: user
        version: v1
    spec:
      serviceAccountName: myapp-user
      containers:
      - name: user
        image: mohinigonawala90/user:9
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /api/v0/users/healthz
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/v0/users/healthz
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 0
        volumeMounts:
          - name: aws-secret
            mountPath: "/root/.aws/"
            readOnly: true
      volumes:
        - name: aws-secret
          secret:
            secretName: aws-secret
---
##################################################################################################
# Item service
##################################################################################################

apiVersion: v1
kind: Service
metadata:
  name: item
  labels:
    app: item
    service: item
spec:
  ports:
    - port: 8080
      name: http-web
  selector:
    app: item
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: item-v1
  labels:
    app: item
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: item
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: item
        version: v1
    spec:
      serviceAccountName: myapp-item
      containers:
        - image: mohinigonawala90/item:9
          name: item
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /api/v0/products/healthz
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/v0/products/healthz
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 10
          volumeMounts:
            - name: aws-secret
              mountPath: "/root/.aws/"
              readOnly: true
      volumes:
        - name: aws-secret
          secret:
            secretName: aws-secret

---
############ Order Service

apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
    service: order
spec:
  ports:
    - port: 8080
      name: http-web
  selector:
    app: order
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-v1
  labels:
    app: order
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: order
        version: v1
    spec:
      serviceAccountName: myapp-order
      containers:
        - image: mohinigonawala90/order:9
          name: order
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /api/v0/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/v0/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 10
          volumeMounts:
            - name: aws-secret
              mountPath: "/root/.aws/"
              readOnly: true
      volumes:
        - name: aws-secret
          secret:
            secretName: aws-secret
