deployment/kubconfig/myapp-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: myapp-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: http
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
    - "*"
  gateways:
    - myapp-gateway
  http:
    - match:
        - uri:
            prefix: "/api/v0/users"
      route:
        - destination:
            host: user
            subset: v1
    - match:
        - uri:
            prefix: "/api/v0/products"
      route:
        - destination:
            host: item
            subset: v1
    - match:
        - uri:
            prefix: "/api/v0/orders"
      route:
        - destination:
            host: order
            subset: v1
---
